--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title> Knowledge sharing</title>
+  <title> Topic sharing</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://kit.fontawesome.com/2c13535727.js" crossorigin="anonymous"></script>
   <div id="header"></div>
